[package]
name = "commons"
version = "0.1.0"
authors = ["IvoSte <36919251+IvoSte@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
float-ord = "0.3.2"
getset = "0.1.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }