[package]
name = "commons"
version = "0.1.0"
authors = ["IvoSte <36919251+IvoSte@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
csv = "1.1"
float-ord = "0.3.2"
getset = "0.1.0"
indicatif = { version = "0.16.2", features = ["rayon"]}
rand = "0.8.4"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
strum_macros = "0.20.1"
strum = "0.17.1"
dialoguer = "0.9.0"
once_cell = "1.8.0"


[profile.release]
lto = true
